	You can change this by using the new attribute @nudgeforgrace, given to many messages, including:
	"setcursor", "getpixelpos", "timetopixel", "timepoint", "interp", "overtype"
	The same messages also now allows for an @accurate mode (not breaking any compatibility).

- bach.pitchpack now treats negative degrees as descending steps (see the bell / bach.expr makepitch function)



***********************
*** VERSION CHANGES ***
***********************

authorization: now the code for a given year can be entered until January of the next year

bach ecosystem: no extra memory is claimed by bach before the first bach object is created

multiple objects: help files and doc updated

- bell, bach.expr:
    makepitch function now treats negative degrees as descending steps (e.g. makepitch(-1, 0, 5) returns B4)
    fixed crash when dividing with // an integer by 0

- bell: fixed various memory leaks
    primeser: the second argument may be left unset
    reduce: fixed memory leaks and memory corruptions (potentially causing crashes)
    fixed parsing of pitch literals
    new built-in functions: mc2f, f2mc, minimum, maximum
    fixed argument names for the makepitch function: new argument names are "degree", "alter" and "octave"
    fixed argument names for all math functions
    dot operator can be preceded by whitespace
    :* operator returns null for non-positive repeat counts
    map function works correctly with mindepth
    evaluation precedence of the unary minus operator is now lower than exponentiation (-2 ** 2 now returns -4, previously 4)
    fixed bug in local variable scoping causing random crashes and data corruption
    arithmser: fixed bug potentially causing the series to be one element shorter if step was not given and start and/or end were floats
    insert: fixed behaviour with "multi" attribute

- all the bell-compliant objects:
    fixed potential crash when reloading a file or re-opening the text editor