@@ -450,17 +450,19 @@ t_llll *transcribe_event_noteoff(t_transcribe *x, t_transcribe_event *ev)
 
 void transcribe_allnotesoff(t_transcribe *x)
 {
-    transcribe_send_tail(x, transcribe_get_time(x));
-    systhread_mutex_lock(x->n_mutex);
-    for (t_llllelem *el = x->n_active_notes->l_head; el; el = el->l_next) {
-        t_transcribe_event *ev = (t_transcribe_event *)hatom_getobj(&el->l_hatom);
-        if (x->n_use_names)
-            transcribe_send_unsel_long(x, ev->n_assigned_name);
-        else
-            transcribe_send_unsel(x, ev->n_onset, hatom_gettype(&ev->n_pitch) == H_PITCH ? hatom_getpitch(&ev->n_pitch).toMC() : hatom_getdouble(&ev->n_pitch), ev->n_voice);
+    if (x->n_transcribing) {
+        transcribe_send_tail(x, transcribe_get_time(x));
+        systhread_mutex_lock(x->n_mutex);
+        for (t_llllelem *el = x->n_active_notes->l_head; el; el = el->l_next) {
+            t_transcribe_event *ev = (t_transcribe_event *)hatom_getobj(&el->l_hatom);
+            if (x->n_use_names)
+                transcribe_send_unsel_long(x, ev->n_assigned_name);
+            else
+                transcribe_send_unsel(x, ev->n_onset, hatom_gettype(&ev->n_pitch) == H_PITCH ? hatom_getpitch(&ev->n_pitch).toMC() : hatom_getdouble(&ev->n_pitch), ev->n_voice);
+        }
+        transcribe_clear_active_notes(x);
+        systhread_mutex_unlock(x->n_mutex);
     }
-    transcribe_clear_active_notes(x);
-    systhread_mutex_unlock(x->n_mutex);
 }
 
 
